
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int F_OK ;
 int SOFILE ;
 int SRCFILE ;
 int access (int ,int ) ;
 int exit (unsigned short) ;
 int unlink (int ) ;

void cleanup(unsigned short i){
 if(!access(SRCFILE,F_OK))
  unlink(SRCFILE);
 if(!access(SOFILE,F_OK))
  unlink(SOFILE);
 if(i)
  exit(i);
}
