; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/irix/local/extr_20804.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/irix/local/extr_20804.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SRCFILE = common dso_local global i32 0, align 4
@F_OK = common dso_local global i32 0, align 4
@SOFILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cleanup(i16 zeroext %0) #0 {
  %2 = alloca i16, align 2
  store i16 %0, i16* %2, align 2
  %3 = load i32, i32* @SRCFILE, align 4
  %4 = load i32, i32* @F_OK, align 4
  %5 = call i32 @access(i32 %3, i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @SRCFILE, align 4
  %9 = call i32 @unlink(i32 %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* @SOFILE, align 4
  %12 = load i32, i32* @F_OK, align 4
  %13 = call i32 @access(i32 %11, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %10
  %16 = load i32, i32* @SOFILE, align 4
  %17 = call i32 @unlink(i32 %16)
  br label %18

18:                                               ; preds = %15, %10
  %19 = load i16, i16* %2, align 2
  %20 = icmp ne i16 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i16, i16* %2, align 2
  %23 = call i32 @exit(i16 zeroext %22) #3
  unreachable

24:                                               ; preds = %18
  ret void
}

declare dso_local i32 @access(i32, i32) #1

declare dso_local i32 @unlink(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i16 zeroext) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
